@@ -6,16 +6,18 @@ DIST wsgi_intercept-0.6.3.tar.gz 10412 SHA256 a05bae6437014ad4f493281ec044bc136a
 DIST wsgi_intercept-0.6.4.tar.gz 10629 SHA256 8ba0349f7517f946d5ffa7a24092070360e9b89ebf41690d19c680891e511f96 SHA512 d1d64de4a3680438860f05a1a540dfaf2928f7cee0fef71ecd8b40654de76af241d9cc9bbb4c66f69aa3e965a42ef0f0f66b35d5ae81f2b6cce2df4a8a2624f9 WHIRLPOOL 88218070585ef2195e0912ac616058539684b23f2761eccba563cab446ba443f206dacdf9493f0cac4f622f489ce53c4281f6ffc1876df22007d3cfe2bb5b28d
 DIST wsgi_intercept-0.6.5.tar.gz 10613 SHA256 30d456e1c320c18701893c3a87d4530d35d7c7bcfd29048a6ab6e671ce1e9ea5 SHA512 c0851fd9baa115d3f3b50f5d6f29c6442be7fa3f6c4febbd8dc74452068f5d8f36d770f469a48748277d7d7f2b1e6eebb4adda01c8fd975cfddfefc57dcb9ece WHIRLPOOL 661de8b018fc846a9b0bcfca990c54c4e07849d7cceeea7f7070fa01531422816e225bab8a40e9b0914d1e86ac8e4d51a3415fe774677c800540cb62f72aed50
 DIST wsgi_intercept-0.7.0.tar.gz 11453 SHA256 215ea877068f8114c9c659f93174f2013c635f8a4e5bd0c2f8f64da371a1198d SHA512 788814c76cb2d11f72def631ce1614adc8c32e8fccd76b46bb85f52edda893223849a367dc82eb9f7612deec1390ea264bd21d027dacd8f7c5a493187eeb15bb WHIRLPOOL 997b962094773f102c3be3884940edf47df92701ffda140e6666775f572c07edf411d91b751d286f7360c0c73c7641b9a42692a1e6c1c1572870b6d3031f48a8
+DIST wsgi_intercept-0.8.1.tar.gz 27440 SHA256 7e537d4a7274dd522ecf6c8f0715ef94857f527cf38ae69b87cf9cc2912e92fa SHA512 02880dad73d9a3dc4f1b477554abb571c9104510b87fe27e42e648110a1ec1e60261aa850a6b3c0251a46aff19b368ad7131467264541d1a65a913b2469cd1dc WHIRLPOOL 9aac9a58990b1ebc095dc331a170f3c852549419673e722cb72a157978782f7ff7de2dca158958cf1d199f1361879b4765984bca4e9dd52f7c02922d163f2eb3
 EBUILD wsgiintercept-0.6.3.ebuild 979 SHA256 2cfba53a9b1faee812973523e35c7323ff361d72107518aa4349d6a363536e85 SHA512 bb763c1827e5fef0c5fa05c9b909e6059e89e47b9cafedc2b485419b7030f1821c8762cfb819c702aaa4039b21d46375d61290049d774297082663834ab63fa4 WHIRLPOOL af5cf02f96a187d1bf30ff0f1cd83950b2aab149166663962eed125b5e7341db0ab25b29dfaf857fc7ed72a49960bbc3ad2615bb38e2df303ea222214ef73d69
 EBUILD wsgiintercept-0.6.4.ebuild 966 SHA256 b0e6c8c6993c7724ad7b05d61550453dde851ed581dd58b4b0bfd7b81f1c2de2 SHA512 89f37ac9c3b7627fce4802b95ef9960df5496f8395df5bce0a66f68cba45ff02377036f5ad9e38d9113de10c5fdb3ead869c8b6ea45f92d1d4f5227f0ef7ab8c WHIRLPOOL cdffb4a57907bb9938abc2b50beb3c52530ee4902d588032abe1113f5d0a81d7f2afbe62b0069510e1231d6d0752b4141a9610770480ed7d0a8ea9998408746b
 EBUILD wsgiintercept-0.6.5.ebuild 963 SHA256 241d965e9c80e8c3e57117d4f8b4cd8951cd5ac6c54b2c943e1095d83e4e9bf6 SHA512 71ecbc3a674651d91bf7e4e3d529d86b36d9958439bdd7bff7d3718e73aeb460fc94a19bc8179ce958ce07345f5804a2ecf63e5df7e88ccb28f2e1016c9b24e9 WHIRLPOOL 0270f86e66088460e21f1afe448aeaa48e6d06a38591e73e1170506a15304f92952fcc62870e0e7db9b9d627fa6bd6832df7d3949d98e170ed4b3f5d59c9c262
 EBUILD wsgiintercept-0.7.0.ebuild 1046 SHA256 cf0465d57de1241afbf3ebb57060f9e82d5e1aac24da280b6ae3e5652f2a9465 SHA512 f777360730028bca96345a10a6e6e5b91c03343eba1a46e12e67634be05db57704b4da5460c04591ecd00e0cf3224171b3b4927cd0661394a34fe5f2c30e24bc WHIRLPOOL bfa93516ff1b893f70e26edc59d5637560253ed6ad70468523d6bd20e1165cef89f321020e2f9b8be9024f50a3b5067fd5ad67de5a24d0982c5ad4337f199ed4
-MISC ChangeLog 1740 SHA256 f0c871c469249b6b59cb7fc41d4c5c11f29430410cc25e858d7b0a5050c2f4f9 SHA512 335c3281b9af88a71f6cfeb12bf266a094871273e78cb37fcd1e03df3fcc1d7db652869d76e201b80be4bc943f57e65b912c0d8cd82cc86d4de1788c5725db7a WHIRLPOOL 9a05612cdca7ea8ebd5be5dc34e4a3e69c679f79c72662d27f71e0288ffd27509bc019b27f82e883cb8dd7e4c95d41adbba80931692614001766e17089a6e08d
+EBUILD wsgiintercept-0.8.1.ebuild 1346 SHA256 38edce98967c8e88c03deb2704921d8d433dedf4b11f9c1118c455ceacc91526 SHA512 89aebd5f70dbeeb60f0c4ee581b6f2c457217ab62e4097132ba4246565ec83864ff1599c7d8dffe31a260deb6ab57cd5b2dc10a4176f593b529c9bf6c33bef99 WHIRLPOOL 5eba37714d8fe9b9e6892a61b82a1adf8b8c8937662b7d8498ac7bf34a3555f97d4b7a2f235879d5969cbd0e130ac8b50f9c1ad805514c11dcaafc114a4fadb2
+MISC ChangeLog 1905 SHA256 6df733649e2d40cae38f6221390a802f2b56219f6fd6b283ef77a731c3748387 SHA512 1fc2f92a6d5653e9d0b1e049a9374f0f48eb6a934aa9ab474007ab73b456bd57df826642f8ae81ca82dc2229b2745047610b1648fdcadba6d776edcf62c72d77 WHIRLPOOL c4620ecbd296348c5d4a1e0f45809087eab743521985743f616e4bf7186c556fb05d30763495224813026c4f7bb5a5c20b30c0f4dca1e2c856612ba0b71008ac
 MISC metadata.xml 803 SHA256 f3d30905170a4a3e504e186c384312291b84761ca0334230548e7a985b262fc5 SHA512 852d1126441b4b06eb4697237542f37eb7fa5998917dd1be048fd3ab3d0d72068b58c411c15d4b36caea183a8fdb785248e8a2205c67f534a192f5fb1788b883 WHIRLPOOL 31e66427f88fab303cbfeaadc2433a84d73ab4a89b13e9091759a646e57d5bd2f17dd15299ce2b09d3b3f46fd4d32e16ccf966910a5bbbb10bdbb14c77ee3354
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPQ5GEACgkQso7CE7gHKw3S8wCfcVob2CsVda9zMglLk9kR51zJ
-lFgAmwSnqOr2MR03Ta2A+lJke0C+UW1H
-=NRGS
+iEYEAREIAAYFAlPtjlIACgkQso7CE7gHKw35FwCgqvVFlHZWsPrmp1VqtsRTRHsK
+PYIAoJQonOUys0qFTDJjJzhZTCNQqCB1
+=MyAg
 -----END PGP SIGNATURE-----
