@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/wsgiintercept
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/wsgiintercept/ChangeLog,v 1.11 2014/07/24 10:56:38 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/wsgiintercept/ChangeLog,v 1.12 2014/08/15 04:45:24 idella4 Exp $
+
+*wsgiintercept-0.8.1 (15 Aug 2014)
+
+  15 Aug 2014; Ian Delaney <idella4@gentoo.org> +wsgiintercept-0.8.1.ebuild:
+  bump; add IUSE doc, doc build, update test phase
 
 *wsgiintercept-0.7.0 (24 Jul 2014)
 
